--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,12 +8,11 @@ python-dotenv==1.0.0
 
 # Database
 sqlalchemy==2.0.23
-sqlite3-to-postgres==0.1.3
 databases[sqlite]==0.8.0
 aiosqlite==0.19.0
+psycopg2-binary==2.9.9
 
 # Authentication and Security
-python-multipart==0.0.6
 pyotp==2.9.0
 qrcode[pil]==7.4.2
 cryptography==41.0.8
@@ -53,7 +52,6 @@ flake8==6.1.0
 mypy==1.7.1
 
 # CORS and middleware
-fastapi-cors==0.0.6
 
 # Email (for notifications)
 fastapi-mail==1.4.1
