--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,9 +8,9 @@ python-dotenv==1.0.0
 
 # Database
 sqlalchemy==2.0.25
-databases[sqlite]==0.8.0
 aiosqlite==0.19.0
 psycopg2-binary==2.9.9
+asyncpg==0.29.0
 
 # Authentication and Security
 pyotp==2.9.0
