--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,12 +31,14 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
+    "terser": "^5.24.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "build-with-types": "tsc && vite build",
     "preview": "vite preview",
     "type-check": "tsc --noEmit"
   },
