--- a/.env.example
+++ b/.env.example
@@ -4,16 +4,16 @@ DB_USER=dns_user
 DB_PASSWORD=changeme123
 DATABASE_URL=sqlite:///./dns_server.db
 
-# Backend Configuration
+# Backend Configuration - CHANGE THESE IN PRODUCTION!
 SECRET_KEY=your-secret-key-change-this-in-production
 JWT_SECRET_KEY=your-jwt-secret-change-this-in-production
-DEBUG=false
+DEBUG=true
 
-# Frontend Configuration
-VITE_API_URL=http://10.10.20.13:8000
+# Frontend Configuration - Update with your server IP
+VITE_API_URL=http://localhost:8000
 
 # Backend Configuration - Add your server IP to allowed hosts
-ALLOWED_HOSTS=localhost,127.0.0.1,10.10.20.13
+ALLOWED_HOSTS=localhost,127.0.0.1,*
 
 # Redis Configuration
 REDIS_PASSWORD=changeme123
@@ -21,3 +21,7 @@ REDIS_PASSWORD=changeme123
 # Monitoring Configuration
 MONITORING_INTERVAL=60
 HEALTH_CHECK_INTERVAL=300
+
+# Development Settings
+LOG_LEVEL=INFO
+RATE_LIMIT_ENABLED=false
