--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,7 +14,8 @@ aiosqlite==0.19.0
 pyotp==2.9.0
 qrcode[pil]==7.4.2
 cryptography==42.0.8
-bcrypt==4.1.2
+# Pin bcrypt to 4.0.1 to avoid passlib's bcrypt __about__ warning
+bcrypt==4.0.1
 
 # HTTP Clients and requests
 httpx==0.25.2
