New websocket system

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,29 @@ HEALTH_CHECK_INTERVAL=300
 # Development Settings
 LOG_LEVEL=INFO
 RATE_LIMIT_ENABLED=false
+
+# WebSocket Feature Flags for Gradual Rollout
+WEBSOCKET_UNIFIED_ENABLED=false
+WEBSOCKET_GRADUAL_ROLLOUT_ENABLED=false
+WEBSOCKET_ROLLOUT_PERCENTAGE=0
+WEBSOCKET_ROLLOUT_USER_LIST=
+WEBSOCKET_LEGACY_FALLBACK=true
+WEBSOCKET_MIGRATION_MODE=disabled
+WEBSOCKET_FORCE_LEGACY_USERS=
+
+# WebSocket Production Monitoring
+WEBSOCKET_MONITORING_LEVEL=standard
+WEBSOCKET_MONITORING_ENABLED=true
+
+# WebSocket Alert Configuration
+WEBSOCKET_ALERT_WEBHOOK_ENABLED=false
+WEBSOCKET_ALERT_WEBHOOK_URL=
+WEBSOCKET_ALERT_EMAIL_ENABLED=false
+WEBSOCKET_ALERT_SMTP_SERVER=
+WEBSOCKET_ALERT_SMTP_PORT=587
+WEBSOCKET_ALERT_SMTP_USERNAME=
+WEBSOCKET_ALERT_SMTP_PASSWORD=
+WEBSOCKET_ALERT_EMAIL_RECIPIENTS=
+WEBSOCKET_ALERT_SLACK_ENABLED=false
+WEBSOCKET_ALERT_SLACK_WEBHOOK_URL=
+WEBSOCKET_ALERT_SLACK_CHANNEL=
