--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^5.8.4",
+    "@types/qrcode": "^1.5.5",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -20,9 +22,7 @@
     "react-router-dom": "^6.19.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
-    "tailwind-merge": "^2.0.0",
-    "qrcode": "^1.5.3",
-    "@types/qrcode": "^1.5.5"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9.34.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "terser": "^5.24.0",
@@ -41,7 +42,9 @@
     "build": "vite build",
     "build-with-types": "tsc && vite build",
     "preview": "vite preview",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "browserslist": {
     "production": [
