fix zone and forwarder

--- a/bind9/zones.conf
+++ b/bind9/zones.conf
@@ -3,27 +3,14 @@
 // This file is automatically managed by the Hybrid DNS Server web interface
 // Do not edit manually - changes will be overwritten
 //
-
-// === CONDITIONAL FORWARDERS SECTION ===
-// Managed via Web Interface
-
-// Active Directory Domains
-// (Populated via web interface)
-
-// Intranet Zones  
-// (Populated via web interface)
+// Generated at: Installation
+// Configuration version: 1.0
+//
 
 // === AUTHORITATIVE ZONES SECTION ===
 // Managed via Web Interface
-
 // Local zones hosted on this server
-// (Populated via web interface)
+// (Zones will be populated automatically when created via web interface)
 
-// === SECONDARY ZONES SECTION ===
-// Managed via Web Interface
-
-// Secondary/slave zones from other DNS servers
-// (Populated via web interface)
-
-// Last updated: Never (managed by web interface)
-// Configuration version: 1.0
+// Last updated: Installation (managed by web interface)
+// Total zones configured: 0
